test/files/neg/t12648/TopicConfig_1.java

public class TopicConfig_1 {
    @Deprecated public static final String MESSAGE_FORMAT_VERSION_CONFIG = "message.format.version";
}
